# talises

./: .gitignore  CMakeLists.txt  README.md  _config.yml  gauss.xml  install.lisp  plotbin.py  raman.xml  readbin.py  zero.xml
cmake/: FindFFTW.cmake
doc/: doc1.md
examples/1D_harmonic_trap/: eval.py  gauss.xml  timeprop.xml  zero.xml
examples/2D_harmonic_trap/: 2D_gauss.xml  eval.py  timeprop.xml  zero.xml
examples/2D_momentum_transfer/: 2D_gauss.xml
examples/BEC_scattering/: eval.py  first_BEC.xml  second_BEC.xml  timeprop.xml
examples/Rabi_oscillations/: eval.py  gauss.xml  timeprop.xml
examples/Raman_transition/: eval.py  gauss.xml  timeprop.xml  zero.xml
examples/harmonic_trap/: harmonic_trap.xml  zero.xml
examples/harmonic_trap_AI/: eval.py  gauss.xml  timeprop.xml
examples/potential_barrier/: 2D_gauss.xml  eval.py  timeprop.xml
examples/single_bragg/: gauss.xml  timeprop.xml  zero.xml
include/: CRT_Base.h  CRT_Base_IF.h  CRT_shared.h  ParameterHandler.h  cft_1d.h  cft_2d.h  cft_3d.h  cft_base.h  my_structs.h
python-scripts/: plotbin.py  readbin.py
raman_LNSE/include/: CRT_Base.h  CRT_Base_IF.h
raman_LNSE/src/: raman.cpp
src/: CMakeLists.txt  ParameterHandler.cpp  cft_1d.cpp  cft_2d.cpp  cft_3d.cpp  gen_psi_0.cpp  misc.cpp  raman.cpp  talises.cpp
